2013-09-14  Paul Smith  <psmith@gnu.org>

	Fix Savannah bug #35248.

	* main.c (decode_debug_flags): Add support for the "n" flag to
	disable all debugging.
	* make.1: Document the "n" (none) flag.
	* doc/make.texi (Options Summary): Ditto.
	* NEWS: Ditto.

	Fix Savannah bug #33134.  Suggested by David Boyce <dsb@boyski.com>.

	* misc.c (close_stdout): Move to output.c.
	* main.c (main): Move atexit call to output_init().
	* makeint.h: Remove close_stdout() declaration.
	* output.c (output_init): Add close_stdout at exit only if it's	open.

2013-09-14  Paul Smith  <psmith@gnu.org>

	* misc.c (set_append_mode, open_tmpfd, open_tmpfile): Move to output.c.
	* misc.h: Ditto.
	* output.h: Ditto.
	* main.c (main): Move stdio init into output.c:output_init().
	Change open_tmpfile() to output_tmpfile().
	* output.c: Rename open_*() to output_*().  set_append_mode() and
	open_tmpfd() are static.
	(_outputs, log_working_directory): Accept a struct output and
	print to that rather than the global context.
	(output_dump): In recurse mode print enter/leave once for the
	whole makefile.
	(output_init): Initialize this processes stdio as well as child's.

	* vmsjobs.c: Reformat to be closer to convention.

2013-09-12  Paul Smith  <psmith@gnu.org>

	Rework output to handle synchronization and directory logging more
	reliably.

	* output.c: New file.  Implement lazy synchronization and
	directory logging so that we manage them "just in time", and the
	destination of the output is set via a global state variable.
	* output.h: New file.
	* function.c (func_shell_base): Ensure the output is set up before
	running a shell command, in case it writes to stderr.
	(func_error): Use outputs() to generate output.
	* job.h (struct child): Add struct output to track the child's output.
	* job.c: Use struct output in the child structure to track output.
	(child_out, sync_init, assign_child_tempfiles, pump_from_tmp)
	(acquire_semaphore, release_semaphore, sync_output): Move most of