@@ -1,3 +1,8 @@
+2013-09-15  Paul Smith  <psmith@gnu.org>
+
+	* scripts/options/eval: Verify --eval during restart.
+	Test for Savannah bug #39203.
+
 2013-09-14  Paul Smith  <psmith@gnu.org>
 
 	* scripts/features/output-sync: Verify -Orecurse properly.
