@@ -1,3 +1,11 @@
+2013-09-15  Paul Smith  <psmith@gnu.org>
+
+	Fix Savannah bug #39203.
+
+	* main.c (main): Don't set MAKEFLAGS in the environment when we
+	restart.  We have the original command line flags so keep the
+	original MAKEFLAGS settings as well.
+
 2013-09-14  Paul Smith  <psmith@gnu.org>
 
 	Fix Savannah bug #35248.
